--- a/frontend/src/styles/accountCreation.css
+++ b/frontend/src/styles/accountCreation.css
@@ -1,26 +1,20 @@
 .container {
     position: relative;
-    /* top: 100px; */
+    top: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 85vh;
     font-family: 'Poppins', sans-serif;
-    /* width: 20vw; */
 
 }
 
 h2{
     margin-bottom: 20px;
-    /* margin-left: calc((20vw - 270px) / 2); */
-    /* position: relative; */
+    position: relative;
     /* left: -6vw; */
     /* align-self: flex-start; */
     /* margin-left: calc((20vw - 270px) / 2); */
-}
-
-p {
 }
 
 button{
@@ -32,7 +26,7 @@ button{
     width: 150px;
 }
 
-.loginbutton:hover{
+.createbutton:hover{
     background-color: #9c9c9c;
     border-radius: 10px;
     color: white;
@@ -56,17 +50,13 @@ textarea {
     border-radius: 10px;
     /* width: 270px; */
     width: 20vw;
-    height: 33px;
+    height: 23px;
     padding: 10px;
-    /* margin-bottom: 30px; */
+    margin-bottom: 30px;
     resize: horizontal;
     font-family: 'Poppins', sans-serif;
-    line-height: 33px;
+    line-height: 23px;
 
-}
-
-.username-container{
-    margin-bottom: 30px;
 }
 
 
