--- a/frontend/src/styles/accountCreation.css
+++ b/frontend/src/styles/accountCreation.css
@@ -1,6 +1,6 @@
-.container {
+.account-container {
     position: relative;
-    top: 100px;
+    margin-top: 130px;
     display: flex;
     flex-direction: column;
     justify-content: center;
