--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,6 +1,6 @@
 .everything {
     width: fit-content;
-    padding-top: 5%;
+    padding-top: 100px;
     padding-left: 10%;
     padding-right: 10%;
 }
