--- a/frontend/src/styles/aboutUs.css
+++ b/frontend/src/styles/aboutUs.css
@@ -46,7 +46,12 @@ opacity: 0;
 transition: opacity .2s, visibility .2s;
 }
 
-.member:hover .name {
+/* .member:hover .name {
 visibility: visible;
 opacity: 1;
+} */
+
+img:hover {
+    filter: brightness(70%);
+    /* You can adjust the percentage to control the level of dimming */
 }
