--- a/frontend/src/styles/landingAndResults.css
+++ b/frontend/src/styles/landingAndResults.css
@@ -115,4 +115,16 @@
 
 .results-container{
     margin-top: 100px;
+    margin-left: 40px;
+    margin-right: 60px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+
+.results-article-link-text {
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+    margin: 0;
+    display: grid;
+    font-weight: bold;
 }
