--- a/frontend/src/styles/aboutUs.css
+++ b/frontend/src/styles/aboutUs.css
@@ -1,6 +1,6 @@
 .container1 {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .left {
@@ -13,22 +13,30 @@
     text-align: right;
 }
 
-/* .photo {
-    height: 337px;
-    width: 300px;
-    object-fit: fill;
-} */
-
 .member {
-    margin:50px;
-    width: 15%;
-    display:inline-block;    
+    margin:10px;
+    display:inline-block; 
+    overflow: hidden;   
 }
 
-.container2 {
+.member img {
+    width: 200px;
+    height: 250px;
+    max-width: 100%;
+    max-height: 100%;
+    text-align: center;
+}
+
+/* .container2 {
     text-align:center;
     width:100%;
     height: 80pt;
+} */
+
+.container2 {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-content: space-around;
 }
 
 .name {
@@ -39,9 +47,5 @@
     right: 0;
     color: #000000;
     margin-bottom: 1px;
-}
-
-.photo img {
-    width: 300 px;
-    height: 337 px;
+    text-align: center;
 }
