--- a/frontend/src/styles/aboutUs.css
+++ b/frontend/src/styles/aboutUs.css
@@ -27,16 +27,13 @@
     text-align: center;
 }
 
-/* .container2 {
-    text-align:center;
-    width:100%;
-    height: 80pt;
-} */
-
 .container2 {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    /* justify-content: center; */
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    text-align: center;
 }
 
 .name {
@@ -48,4 +45,5 @@
     color: #000000;
     margin-bottom: 1px;
     text-align: center;
+    margin: 5px 0;
 }
