--- a/frontend/src/styles/aboutUs.css
+++ b/frontend/src/styles/aboutUs.css
@@ -17,18 +17,22 @@
     margin:10px;
     display:inline-block; 
     overflow: hidden;   
+    /* width: calc(20% - 10px); */
 }
 
 .member img {
     width: 200px;
     height: 250px;
-    max-width: 100%;
-    max-height: 100%;
+    /* width: 100%;
+    height: 100%; */
     text-align: center;
+    /* object-fit: cover; */
 }
 
 .container2 {
-    display: grid;
+    flex-wrap: wrap;
+    /* display: grid; */
+    display: flex;
     justify-content: space-evenly;
     /* justify-content: center; */
     grid-template-columns: repeat(4, 1fr);
@@ -46,4 +50,8 @@
     margin-bottom: 1px;
     text-align: center;
     margin: 5px 0;
+    justify-content: space-around;
+    max-width: 200px;
+    word-wrap: break-word; /* Wrap long words if they exceed container width */
+    overflow-wrap: conta; /* Fallback for older browsers */
 }
