--- a/frontend/src/styles/userProfile.css
+++ b/frontend/src/styles/userProfile.css
@@ -1,11 +1,15 @@
-.login-container {
+.profile-container {
     position: relative;
-    margin-top: 100px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Poppins', sans-serif;
+    background: #f4f4f9;
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .title{
@@ -13,21 +17,14 @@
     font-weight: bold;
     color: #2b3d55;
     margin-bottom: 20px;
-    font-family: 'Poppins', sans-serif;
 }
 
-.textinput {
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    width: 30vh;
-}
-
-.login-button {
+.logout-button {
     border: 1px solid white;
     background: #3D5779;
     color: white;
     padding: 20px;
-    width: 200px;
+    width: 150px;
     height: 35px;
     border-radius: 30px;
     display: flex;
@@ -40,38 +37,26 @@
     border-width: 2px;
 }
 
-.login-button:hover {
+.logout-button:hover {
     background: white;
     color: #2b3d55;
     border-color: #3D5779;
     border-width: 2px;
 }
 
-
-.create-account{
-    margin-top: 20px;
-    font-size: 15px;
-}
-
-.create-account-link{
-    color: #3D5779;
-    font-size: 15px;
-}
-
-.create-account-link:hover{
-    text-decoration: none;
-}
-
-.error {
-    color: red;
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 10px;
-}
-
-.account-details {
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    margin-top: 20px;
+.user-details {
+    font-size: 16px;
+    color: #2b3d55;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 20px;
 }
