--- a/frontend/src/styles/accountCreation.css
+++ b/frontend/src/styles/accountCreation.css
@@ -1,42 +1,31 @@
-.container {
-  position: relative;
-  top: 100px;
+* {
+  box-sizing: border-box;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(1, 1fr));
+  grid-gap: 20px;
+  padding: 20px; /* Consider removing if still causing issues */
+}
+
+.topic-box {
+  background-color: #d9d9d9;
+  color: black;
+  border-radius: 15px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: "Poppins", sans-serif;
+  height: 100px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
 }
 
-h2 {
-  margin-bottom: 20px;
-  position: relative;
+.topic-box:hover {
+  background-color: #989898;
+  transform: scale(1.05);
 }
 
-button {
-  border-radius: 10px;
-  border-color: #e6e6e6;
-  height: 33px;
-  background-color: #e6e6e6;
-  width: 150px;
-}
-
-.createbutton:hover {
-  background-color: #9c9c9c;
-  border-radius: 10px;
-  color: white;
-  transition: background 0.5s ease;
-}
-
-textarea {
-  background-color: #e6e6e6;
-  border-color: #e6e6e6;
-  border-radius: 10px;
-  width: 20vw;
-  height: 23px;
-  padding: 10px;
-  margin-bottom: 30px;
-  resize: horizontal;
-  font-family: "Poppins", sans-serif;
-  line-height: 23px;
+.topic-box.selected {
+  background-color: #4caf50;
 }
