--- a/frontend/src/styles/landingAndResults.css
+++ b/frontend/src/styles/landingAndResults.css
@@ -19,6 +19,12 @@
 .form-container {
     display: flex;
     justify-content: center;
+    margin-top: 70px;
+}
+
+.non-user-form-container {
+    display: flex;
+    justify-content: center;
 }
 
 .input-container {
@@ -72,15 +78,16 @@
     display:flex;
     justify-content: flex-end;
     width: 100%;
+    margin-top: 10px;
 }
 
 .go-button {
     border: 1px solid white;
-    background: white;
-    padding: 20px;
+    background: #2b3d55;
+    padding: 10px;
     border-radius: 30px;
     width: 100px;
-    color: #2b3d55;
+    color: white;
     transition: background 0.5s ease;
     display: flex;
     justify-content: center;
@@ -88,11 +95,13 @@
     font-family: 'Poppins', sans-serif;
     font-size: 15px;
     text-decoration: none;
+    border-color: #2b3d55;
+    border-width: 2px;
 }
 
 .go-button:hover {
-    background: #2b3d55;
-    color: white;
+    background: white;
+    color: #2b3d55;
 }
 
 .article-container {
