box around login and account

--- a/frontend/src/styles/myAccount.css
+++ b/frontend/src/styles/myAccount.css
@@ -10,7 +10,12 @@
     padding: 40px;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 750;
+    width: 60vw;
 }
+
+
 
 .title{
     font-size: 25px;
