--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -14,6 +14,7 @@
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 700px;
 }
 
 .title{
