--- a/frontend/src/styles/myAccount.css
+++ b/frontend/src/styles/myAccount.css
@@ -11,7 +11,7 @@
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 750;
+    max-width: 750px;
     width: 60vw;
 }
 
