--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -4,4 +4,6 @@
     padding-left: 10%;
     padding-right: 10%;
     margin-bottom: 5%;
+    font-family: 'Poppins', sans-serif;
+    color: #2b3d55;
 }
